samples/_failures_safe/1761697146_15a931_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0cd6631e.c: In function ‘main’:
./samples/SAFE/__tmp_0cd6631e.c:199:12: error: missing terminating " character
  199 |     printf("----\
      |            ^~~~~~
./samples/SAFE/__tmp_0cd6631e.c:199:5: error: expected expression at end of input
  199 |     printf("----\
      |     ^~~~~~
./samples/SAFE/__tmp_0cd6631e.c:199:5: error: expected declaration or statement at end of input
